# Robotic_Unscrewing

./: README.md
agiprobot_msgs/: CMakeLists.txt  package.xml
agiprobot_msgs/include/agiprobot_msgs/: Database.h
agiprobot_msgs/msg/: Keyboard.msg  LinearschwingungUmMittelpunkt.msg  LissajousscheFiguren.msg  PoseArray.msg  SukzessiveApproximation.msg  TCPPose.msg  ToolframeForce.msg
agiprobot_msgs/src/agiprobot_msgs/: Database.cpp
agiprobot_msgs/srv/: align.srv  detection.srv  executeSearch.srv  fsm.srv  goal.srv  gotoTP.srv  moveit.srv  state.srv  tcp.srv  teachMode.srv  tool.srv  toolframeForce.srv  unscrew.srv
control_lib/: CMakeLists.txt  package.xml
control_lib/executables/: gotoTP_client_node.cpp  stopProg.cpp  unscrewTest.cpp
control_lib/include/control_lib/: DrillControl.h  RobotControl.h  String_cmd.h  String_cmdRequest.h  String_cmdResponse.h  TaskInterface.h  UsefullFunctions.h  spiral_interpolation.h
control_lib/include/ur_rtde/: robot_state.h  robotiq_gripper.h  rtde_control_interface.h  rtde_io_interface.h  script_client.h
control_lib/launch/: unscrewTest.launch
control_lib/src/: DrillControl.cpp  RobotControl.cpp  TaskInterface.cpp  UsefullFunctions.cpp  code.txt  drill operation  spiral_interpolation.cpp  trajectory_execution.cpp
control_lib/src/ur_rtde/: dashboard_client.cpp  dashboard_enums.cpp  robot_state.cpp  robotiq_gripper.cpp  rtde.cpp  rtde_control_interface.cpp  rtde_io_interface.cpp  rtde_python_bindings.cpp  rtde_receive_interface.cpp  script_client.cpp
control_lib/src/ur_rtde/urcl/: server.cpp  (+1 more)
include/: Demontagestation.uap  README.md  Systemarchitektur.pptx  Systemarchitektur__2_.pptx
screw_alignment/: CMakeLists.txt  package.xml
screw_alignment/include/screw_alignment/: spiral_interpolation.h  trajectory_execution.h
screw_alignment/scripts/: __init__.py  pose_and_spiral.py  spiral_intepolation.py  spiral_interpolation
screw_alignment/src/: ft_sensor.cpp  merging_csv.py  spiral_interpolation.cpp  trajectory_execution.cpp
screw_gripper/: CMakeLists.txt  README.md  package.xml
screw_gripper/_Anothers/: ToDos
screw_gripper/_Anothers/ROS/: ROS-Arduino  ROS-OPCUA  screw_gripper_node
screw_gripper/_Anothers/config/: gripper.launch (with config)  log.conf
screw_gripper/_Anothers/git/: gitlab_access_token  gitlab_commands
screw_gripper/include/: arduino_gripper.h  arduino_handle.h  gripper_handle.h  opcua_gripper.h  opcua_handle.h
screw_gripper/include/files/Arduino/MightyZap/Rod_End_Tip/Rod_End_Tip_v2/: Rod_End_Tip_v2.prt
screw_gripper/include/files/Arduino/MightyZap/Rod_End_Tip/Rod_End_Tip_v2.1/: Rod_End_Tip_v2.1.prt
screw_gripper/include/files/Arduino/arduino_master/: arduino_master.ino  mighty_zap_lib.h
screw_gripper/include/files/PLC/: Demontagestation.uap
screw_gripper/include/files/PLC/EGP_40_N_N_IOL/IO-Link_FB/: FB_IO-Link_Greifer.scl
screw_gripper/include/files/PLC/EGP_40_N_N_IOL/IODD/: SCHUNK-EGP-20211116-IODD1.1.xml
screw_gripper/include/libraries/: arduino_gripper_library_Link
screw_gripper/include/libraries/arduino_gripper_library/: arduino_share.h  user_settings.h
screw_gripper/launch/: gripper.launch
screw_gripper/msg/: ArduinoInfo.msg  Feedback.msg  OPCUAInfo.msg
screw_gripper/src/: start.cpp
screw_gripper/srv/: Initiate.srv  ManualControl.srv  ReadInfo.srv  Setup.srv
ur10e_disassembly_station/: CMakeLists.txt  package.xml
ur10e_disassembly_station/etc/moveit/: paths
ur10e_disassembly_station/include/: screw_alignment_pm_node.h  station_control_node.h
ur10e_disassembly_station/include/ur10e_disassembly_station/: FSM.h  MoveItService.h  PIDController.h  StationControlService.h
ur10e_disassembly_station/launch/: start_station.launch
ur10e_disassembly_station/src/: moveit_server_node.cpp  screw_alignment_pm_node.cpp  station_control_node.cpp  station_server_node.cpp
ur10e_disassembly_station/src/ur10e_disassembly_station/: FSM.cpp  MoveItService.cpp  PIDController.cpp  StationControlService.cpp
(+7 files in other folders)
