<?xml version="1.0"?>
<package format="2">
  <name>agiprobot_msgs</name>
  <version>0.0.0</version>
  <description>include all the ros_msgs and ros_services needed for Agiprobot disassemble station</description>

  <maintainer email="yuhanjin89@gmail.com">Yuhan Jin</maintainer>

  <license> MIT </license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>
  

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>

</package>
